src/parser/KXIParser.java
// Generated from C:\Users\ryan\KXI.g4 by ANTLR 4.0
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KXIParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MODIFIER=1, KEYFUNC=2, PRIMITIVE_TYPE=3, VOID=4, IF=5, ELSE=6, WHILE=7, 
		RETURN=8, CLASS=9, NULL=10, THIS=11, NEW=12, MAIN=13, CIN=14, COUT=15, 
		CHAR=16, COMMENT=17, LOGIC=18, BOOLEAN=19, ID=20, INT=21, WS=22, COMMA=23, 
		SEMICOLON=24, LPAREN=25, RPAREN=26, RSQUARE=27, LSQUARE=28, RBRACKET=29, 
		LBRACKET=30, OR=31, DOT=32, QUERY=33, IN=34, OUT=35, BOOL_EXPR=36, ASSIGN=37, 
		MATH=38;
	public static final String[] tokenNames = {
		"<INVALID>", "MODIFIER", "KEYFUNC", "PRIMITIVE_TYPE", "'void'", "'if'", 
		"'else'", "'while'", "'return'", "'class'", "'null'", "'this'", "'new'", 
		"'main'", "'cin'", "'cout'", "CHAR", "COMMENT", "LOGIC", "BOOLEAN", "ID", 
		"INT", "WS", "','", "';'", "'('", "')'", "']'", "'['", "'}'", "'{'", "'|'", 
		"'.'", "'?'", "'>>'", "'<<'", "BOOL_EXPR", "'='", "MATH"
	};
	public static final int
		RULE_compilation_unit = 0, RULE_class_declaration = 1, RULE_class_member_declaration = 2, 
		RULE_field_declaration = 3, RULE_constructor_declaration = 4, RULE_method_body = 5, 
		RULE_variable_declaration = 6, RULE_parameter_list = 7, RULE_parameter = 8, 
		RULE_statement = 9, RULE_expression = 10, RULE_expressionz = 11, RULE_fn_arr_member = 12, 
		RULE_argument_list = 13, RULE_assignment_expression = 14, RULE_type = 15, 
		RULE_class_name = 16, RULE_new_declaration = 17, RULE_member_refz = 18;
	public static final String[] ruleNames = {
		"compilation_unit", "class_declaration", "class_member_declaration", "field_declaration", 
		"constructor_declaration", "method_body", "variable_declaration", "parameter_list", 
		"parameter", "statement", "expression", "expressionz", "fn_arr_member", 
		"argument_list", "assignment_expression", "type", "class_name", "new_declaration", 
		"member_refz"
	};

	@Override
	public String getGrammarFileName() { return "KXI.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public KXIParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Compilation_unitContext extends ParserRuleContext {
		public Class_declarationContext class_declaration(int i) {
			return getRuleContext(Class_declarationContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(KXIParser.RPAREN, 0); }
		public List<Class_declarationContext> class_declaration() {
			return getRuleContexts(Class_declarationContext.class);
		}
		public TerminalNode MAIN() { return getToken(KXIParser.MAIN, 0); }
		public TerminalNode VOID() { return getToken(KXIParser.VOID, 0); }
		public TerminalNode EOF() { return getToken(KXIParser.EOF, 0); }
		public Method_bodyContext method_body() {
			return getRuleContext(Method_bodyContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(KXIParser.LPAREN, 0); }
		public Compilation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilation_unit; }
	}

	public final Compilation_unitContext compilation_unit() throws RecognitionException {
		Compilation_unitContext _localctx = new Compilation_unitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilation_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(38); class_declaration();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44); match(VOID);
			setState(45); match(MAIN);
			setState(46); match(LPAREN);
			setState(47); match(RPAREN);
			setState(48); method_body();
			setState(49); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declarationContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(KXIParser.LBRACKET, 0); }
		public TerminalNode CLASS() { return getToken(KXIParser.CLASS, 0); }
		public TerminalNode RBRACKET() { return getToken(KXIParser.RBRACKET, 0); }
		public List<Class_member_declarationContext> class_member_declaration() {
			return getRuleContexts(Class_member_declarationContext.class);
		}
		public Class_member_declarationContext class_member_declaration(int i) {
			return getRuleContext(Class_member_declarationContext.class,i);
		}
		public Class_nameContext class_name() {
			return getRuleContext(Class_nameContext.class,0);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declaration; }
	}

	public final Class_declarationContext class_declaration() throws RecognitionException {
		Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); match(CLASS);
			setState(52); class_name();
			setState(53); match(LBRACKET);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MODIFIER || _la==ID) {
				{
				{
				setState(54); class_member_declaration();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60); match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_member_declarationContext extends ParserRuleContext {
		public Constructor_declarationContext constructor_declaration() {
			return getRuleContext(Constructor_declarationContext.class,0);
		}
		public Field_declarationContext field_declaration() {
			return getRuleContext(Field_declarationContext.class,0);
		}
		public TerminalNode ID() { return getToken(KXIParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode MODIFIER() { return getToken(KXIParser.MODIFIER, 0); }
		public Class_member_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_member_declaration; }
	}

	public final Class_member_declarationContext class_member_declaration() throws RecognitionException {
		Class_member_declarationContext _localctx = new Class_member_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_member_declaration);
		try {
			setState(68);
			switch (_input.LA(1)) {
			case MODIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(62); match(MODIFIER);
				setState(63); type();
				setState(64); match(ID);
				setState(65); field_declaration();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(67); constructor_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_declarationContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(KXIParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(KXIParser.SEMICOLON, 0); }
		public TerminalNode LSQUARE() { return getToken(KXIParser.LSQUARE, 0); }
		public Assignment_expressionContext assignment_expression() {
			return getRuleContext(Assignment_expressionContext.class,0);
		}
		public TerminalNode RSQUARE() { return getToken(KXIParser.RSQUARE, 0); }
		public Method_bodyContext method_body() {
			return getRuleContext(Method_bodyContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(KXIParser.LPAREN, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(KXIParser.ASSIGN, 0); }
		public Field_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_declaration; }
	}

	public final Field_declarationContext field_declaration() throws RecognitionException {
		Field_declarationContext _localctx = new Field_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_field_declaration);
		int _la;
		try {
			setState(85);
			switch (_input.LA(1)) {
			case SEMICOLON:
			case LSQUARE:
			case ASSIGN:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				_la = _input.LA(1);
				if (_la==LSQUARE) {
					{
					setState(70); match(LSQUARE);
					setState(71); match(RSQUARE);
					}
				}

				setState(76);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(74); match(ASSIGN);
					setState(75); assignment_expression();
					}
				}

				setState(78); match(SEMICOLON);
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(79); match(LPAREN);
				setState(81);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIMITIVE_TYPE) | (1L << VOID) | (1L << ID))) != 0)) {
					{
					setState(80); parameter_list();
					}
				}

				setState(83); match(RPAREN);
				setState(84); method_body();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constructor_declarationContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(KXIParser.RPAREN, 0); }
		public Method_bodyContext method_body() {
			return getRuleContext(Method_bodyContext.class,0);
		}
		public Class_nameContext class_name() {
			return getRuleContext(Class_nameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(KXIParser.LPAREN, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Constructor_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor_declaration; }
	}

	public final Constructor_declarationContext constructor_declaration() throws RecognitionException {
		Constructor_declarationContext _localctx = new Constructor_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constructor_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); class_name();
			setState(88); match(LPAREN);
			setState(90);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIMITIVE_TYPE) | (1L << VOID) | (1L << ID))) != 0)) {
				{
				setState(89); parameter_list();
				}
			}

			setState(92); match(RPAREN);
			setState(93); method_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_bodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode LBRACKET() { return getToken(KXIParser.LBRACKET, 0); }
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode RBRACKET() { return getToken(KXIParser.RBRACKET, 0); }
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public Method_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_body; }
	}

	public final Method_bodyContext method_body() throws RecognitionException {
		Method_bodyContext _localctx = new Method_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_method_body);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(95); match(LBRACKET);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(96); variable_declaration();
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << NULL) | (1L << THIS) | (1L << CIN) | (1L << COUT) | (1L << CHAR) | (1L << BOOLEAN) | (1L << ID) | (1L << INT) | (1L << LPAREN) | (1L << LBRACKET))) != 0)) {
				{
				{
				setState(102); statement();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108); match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(KXIParser.SEMICOLON, 0); }
		public TerminalNode LSQUARE() { return getToken(KXIParser.LSQUARE, 0); }
		public Assignment_expressionContext assignment_expression() {
			return getRuleContext(Assignment_expressionContext.class,0);
		}
		public TerminalNode RSQUARE() { return getToken(KXIParser.RSQUARE, 0); }
		public TerminalNode ID() { return getToken(KXIParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(KXIParser.ASSIGN, 0); }
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variable_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); type();
			setState(111); match(ID);
			setState(114);
			_la = _input.LA(1);
			if (_la==LSQUARE) {
				{
				setState(112); match(LSQUARE);
				setState(113); match(RSQUARE);
				}
			}

			setState(118);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(116); match(ASSIGN);
				setState(117); assignment_expression();
				}
			}

			setState(120); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_listContext extends ParserRuleContext {
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(KXIParser.COMMA, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(KXIParser.COMMA); }
		public Parameter_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_list; }
	}

	public final Parameter_listContext parameter_list() throws RecognitionException {
		Parameter_listContext _localctx = new Parameter_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameter_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); parameter();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(123); match(COMMA);
				setState(124); parameter();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public TerminalNode LSQUARE() { return getToken(KXIParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(KXIParser.RSQUARE, 0); }
		public TerminalNode ID() { return getToken(KXIParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); type();
			setState(131); match(ID);
			setState(134);
			_la = _input.LA(1);
			if (_la==LSQUARE) {
				{
				setState(132); match(LSQUARE);
				setState(133); match(RSQUARE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(KXIParser.LBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(KXIParser.RPAREN, 0); }
		public TerminalNode IN() { return getToken(KXIParser.IN, 0); }
		public TerminalNode WHILE() { return getToken(KXIParser.WHILE, 0); }
		public TerminalNode OUT() { return getToken(KXIParser.OUT, 0); }
		public TerminalNode ELSE() { return getToken(KXIParser.ELSE, 0); }
		public TerminalNode RETURN() { return getToken(KXIParser.RETURN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode SEMICOLON() { return getToken(KXIParser.SEMICOLON, 0); }
		public TerminalNode RBRACKET() { return getToken(KXIParser.RBRACKET, 0); }
		public TerminalNode CIN() { return getToken(KXIParser.CIN, 0); }
		public TerminalNode COUT() { return getToken(KXIParser.COUT, 0); }
		public TerminalNode LPAREN() { return getToken(KXIParser.LPAREN, 0); }
		public TerminalNode IF() { return getToken(KXIParser.IF, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statement);
		int _la;
		try {
			setState(177);
			switch (_input.LA(1)) {
			case LBRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(136); match(LBRACKET);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << NULL) | (1L << THIS) | (1L << CIN) | (1L << COUT) | (1L << CHAR) | (1L << BOOLEAN) | (1L << ID) | (1L << INT) | (1L << LPAREN) | (1L << LBRACKET))) != 0)) {
					{
					{
					setState(137); statement();
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(143); match(RBRACKET);
				}
				break;
			case NULL:
			case THIS:
			case CHAR:
			case BOOLEAN:
			case ID:
			case INT:
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(144); expression();
				setState(145); match(SEMICOLON);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(147); match(IF);
				setState(148); match(LPAREN);
				setState(149); expression();
				setState(150); match(RPAREN);
				setState(151); statement();
				setState(154);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(152); match(ELSE);
					setState(153); statement();
					}
					break;
				}
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(156); match(WHILE);
				setState(157); match(LPAREN);
				setState(158); expression();
				setState(159); match(RPAREN);
				setState(160); statement();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 5);
				{
				setState(162); match(RETURN);
				setState(164);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << THIS) | (1L << CHAR) | (1L << BOOLEAN) | (1L << ID) | (1L << INT) | (1L << LPAREN))) != 0)) {
					{
					setState(163); expression();
					}
				}

				setState(166); match(SEMICOLON);
				}
				break;
			case CIN:
				enterOuterAlt(_localctx, 6);
				{
				setState(167); match(CIN);
				setState(168); match(IN);
				setState(169); expression();
				setState(170); match(SEMICOLON);
				}
				break;
			case COUT:
				enterOuterAlt(_localctx, 7);
				{
				setState(172); match(COUT);
				setState(173); match(OUT);
				setState(174); expression();
				setState(175); match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode CHAR() { return getToken(KXIParser.CHAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(KXIParser.RPAREN, 0); }
		public TerminalNode INT() { return getToken(KXIParser.INT, 0); }
		public TerminalNode BOOLEAN() { return getToken(KXIParser.BOOLEAN, 0); }
		public ExpressionzContext expressionz() {
			return getRuleContext(ExpressionzContext.class,0);
		}
		public Fn_arr_memberContext fn_arr_member() {
			return getRuleContext(Fn_arr_memberContext.class,0);
		}
		public TerminalNode ID() { return getToken(KXIParser.ID, 0); }
		public TerminalNode NULL() { return getToken(KXIParser.NULL, 0); }
		public TerminalNode LPAREN() { return getToken(KXIParser.LPAREN, 0); }
		public Member_refzContext member_refz() {
			return getRuleContext(Member_refzContext.class,0);
		}
		public TerminalNode THIS() { return getToken(KXIParser.THIS, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expression);
		int _la;
		try {
			setState(211);
			switch (_input.LA(1)) {
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(179); match(LPAREN);
				setState(180); expression();
				setState(181); match(RPAREN);
				setState(183);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOGIC) | (1L << BOOL_EXPR) | (1L << ASSIGN) | (1L << MATH))) != 0)) {
					{
					setState(182); expressionz();
					}
				}

				}
				break;
			case BOOLEAN:
				enterOuterAlt(_localctx, 2);
				{
				setState(185); match(BOOLEAN);
				setState(187);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOGIC) | (1L << BOOL_EXPR) | (1L << ASSIGN) | (1L << MATH))) != 0)) {
					{
					setState(186); expressionz();
					}
				}

				}
				break;
			case NULL:
				enterOuterAlt(_localctx, 3);
				{
				setState(189); match(NULL);
				setState(191);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOGIC) | (1L << BOOL_EXPR) | (1L << ASSIGN) | (1L << MATH))) != 0)) {
					{
					setState(190); expressionz();
					}
				}

				}
				break;
			case INT:
				enterOuterAlt(_localctx, 4);
				{
				setState(193); match(INT);
				setState(195);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOGIC) | (1L << BOOL_EXPR) | (1L << ASSIGN) | (1L << MATH))) != 0)) {
					{
					setState(194); expressionz();
					}
				}

				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(197); match(CHAR);
				setState(199);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOGIC) | (1L << BOOL_EXPR) | (1L << ASSIGN) | (1L << MATH))) != 0)) {
					{
					setState(198); expressionz();
					}
				}

				}
				break;
			case THIS:
			case ID:
				enterOuterAlt(_localctx, 6);
				{
				setState(201);
				_la = _input.LA(1);
				if ( !(_la==THIS || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(203);
				_la = _input.LA(1);
				if (_la==LPAREN || _la==LSQUARE) {
					{
					setState(202); fn_arr_member();
					}
				}

				setState(206);
				_la = _input.LA(1);
				if (_la==DOT) {
					{
					setState(205); member_refz();
					}
				}

				setState(209);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOGIC) | (1L << BOOL_EXPR) | (1L << ASSIGN) | (1L << MATH))) != 0)) {
					{
					setState(208); expressionz();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionzContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode BOOL_EXPR() { return getToken(KXIParser.BOOL_EXPR, 0); }
		public TerminalNode LOGIC() { return getToken(KXIParser.LOGIC, 0); }
		public Assignment_expressionContext assignment_expression() {
			return getRuleContext(Assignment_expressionContext.class,0);
		}
		public TerminalNode MATH() { return getToken(KXIParser.MATH, 0); }
		public TerminalNode ASSIGN() { return getToken(KXIParser.ASSIGN, 0); }
		public ExpressionzContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionz; }
	}
